Added special event and updated simple event to support specific locations

--- a/public/Plataforma/events/select-event.html
+++ b/public/Plataforma/events/select-event.html
@@ -44,7 +44,7 @@
       <h2>Evento<span> Especial</span></h2>
       <p>Proximamente...</p>
     </figcaption>
-    <a href="#"></a>
+    <a href="special-event.html"></a>
   </figure>
 
 </div>
