Updated style to show developer information

--- a/public/Plataforma/index.html
+++ b/public/Plataforma/index.html
@@ -8,6 +8,7 @@
     <link type="text/css" rel="stylesheet" href="css/loader.css">
     <link type="text/css" rel="stylesheet" href="css/login.css">
     <link type="text/css" rel="stylesheet" href="css/style.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="css/typed-developer.css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -15,6 +16,10 @@
 </head>
 
 <body>
+
+<div class="developer-info typed-light">
+    <span id="developer"></span><span class="typed-cursor-z">|</span>
+</div>
 
 <div id="loader">
     <div id="center">
@@ -53,6 +58,8 @@
 
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/typed.min.js"></script>
+<script type="text/javascript" src="js/typed-developer.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <script type="text/javascript" src="js/login.js"></script>
 </body>
