--- a/public/Plataforma/index.html
+++ b/public/Plataforma/index.html
@@ -48,7 +48,7 @@
             <label for="contrasena">Contraseña</label>
         </div>
     </div>
-    <button class="btn waves-effect waves-light" type="submit" name="action" id="submit">Submit
+    <button class="btn waves-effect waves-light" type="submit" name="action" id="submit">Entrar
         <i class="material-icons right">send</i>
     </button>
 </div>
