Minor update to the index background color

--- a/public/Plataforma/index.html
+++ b/public/Plataforma/index.html
@@ -17,7 +17,7 @@
     <title>UVA</title>
 </head>
 
-<body style="background-color: #433f83; height: 100vh">
+<body class="dark-purple-gradient-bottom">
 
 <div class="developer-info typed-light">
     <span id="developer"></span><span class="typed-cursor-z">|</span>
