--- a/public/Plataforma/events/simple-event.html
+++ b/public/Plataforma/events/simple-event.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="../css/materialize.min.css" media="screen,projection"/>
+
+
     <link type="text/css" rel="stylesheet" href="../css/loader.css">
     <link type="text/css" rel="stylesheet" href="../css/style.css" media="screen,projection"/>
+
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/uikit.min.css" />
+    <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/default.date.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <title>UVA - Evento Simple</title>
 </head>
 
-<body>
+<body class="background-white">
+
 
 <div id="loader">
     <div id="center">
@@ -31,98 +38,180 @@
     </div>
 </div>
 
-<div class="navbar-fixed">
-    <nav>
-        <div class="nav-wrapper teal">
-            <a href="#!" class="brand-logo uva-margin">UVA - Evento Simple</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="#">v1.0.0</a></li>
-            </ul>
+<nav class="navbar navbar-dark dark-blue-gradient">
+    <a class="navbar-brand" href="#">Evento Simple</a>
+    <a class="btn btn-outline-light my-2 my-sm-0" href="select-event.html"><span uk-icon="home"></span></a>
+</nav>
+
+
+<div class=" row justify-content-center justify-content-lg-start">
+    <div class="col-11 col-md-8 offset-lg-1">
+        <select class="uk-select uk-margin-top" id="ubicacion"></select>
+    </div>
+    <div class="col-11 col-md-8 offset-lg-1">
+        <select class="uk-select uk-margin-top" id="lugar"></select>
+    </div>
+    <div class="col-11 col-md-8 col-lg-8 offset-lg-1">
+        <input class="uk-input uk-margin-top" type="text" placeholder="Título" id="titulo">
+    </div>
+    <div class="col-11 col-md-8 offset-lg-1">
+        <input class="uk-input uk-margin-top" placeholder="Frase (Aparecerá debajo del título)" id="frase">
+    </div>
+    <div class="col-11 col-md-8 offset-lg-1">
+        <textarea class="uk-textarea uk-margin-top" rows="5" placeholder="Descripción" id="info"></textarea>
+    </div>
+    <div class="col-11 col-md-8 offset-lg-1">
+        <input class="uk-input uk-margin-top" type="text" placeholder="Link (Opcional)" id="link">
+    </div>
+
+    <div class="col-11 col-md-4 offset-md-1 offset-lg-1">
+        <div class="uk-inline uk-margin-top">
+            <span class="uk-form-icon" uk-icon="icon: calendar"></span>
+            <input class="uk-input" type="text" placeholder="Fecha subida" id="fecha-subida">
         </div>
-    </nav>
-</div>
-
-<div class="row uva-margin-center">
-    <div class="row">
-    <select class="browser-default col s12 m12" id="ubicacion"></select>
-    </div>
-    <div class="row">
-    <select class="browser-default disabled col s12 m12" id="lugar"></select>
     </div>
 
-    <div class="input-field col s12 m7">
-        <i class="material-icons prefix">title</i>
-        <input id="titulo" type="text" class="validate">
-        <label for="titulo">Título</label>
+    <div class="col-11 col-md-4">
+        <div class="uk-inline uk-margin-top">
+            <span class="uk-form-icon" uk-icon="icon: calendar"></span>
+            <input class="uk-input" type="text" placeholder="Fecha bajada" id="fecha-bajada">
+        </div>
     </div>
 
-    <div class="input-field col s12 m7">
-        <i class="material-icons prefix">subtitles</i>
-        <input id="frase" type="text" class="validate">
-        <label for="titulo">Frase (Aparacera debajo del título)</label>
-    </div>
-
-    <div class="input-field col s12 m7 uva-margin-top">
-        <i class="material-icons prefix">info</i>
-        <textarea id="info" class="materialize-textarea validate"></textarea>
-        <label for="info">Descipción o información sobre el evento.</label>
-    </div>
-
-    <div class="input-field col s12 m7">
-        <i class="material-icons prefix">link</i>
-        <input id="link" type="text" class="validate">
-        <label for="titulo">Enlace para obtener más información (opcional)</label>
-    </div>
-
-    <div class="col s12 m6 uva-margin-top">
-        <i class="material-icons prefix">date_range</i>
-        <input type="text" class="datepicker" id="fecha-subida" placeholder="Seleccione la fecha de subida">
-    </div>
-
-    <div class="col s12 m6 uva-margin-top">
-        <i class="material-icons prefix">date_range</i>
-        <input type="text" class="datepicker" id="fecha-bajada" placeholder="Seleccione la fecha de bajada">
-    </div>
-
-
-    <div class="col s12 m12 uva-margin-top">
-        <div class="file-field input-field">
-            <div class="btn">
-                <span>Seleccionar Miniatura</span>
-                <input type="file" id="img-miniatura" accept="image/*" data-max-size="5000">
-            </div>
-            <div class="file-path-wrapper">
-                <input class="file-path validate"  type="text" placeholder="Arrastre o seleccione la imagen que desea para la miniatura
-del evento">
+    <div class="col-11 col-md-4 offset-lg-1" id="miniatura-drop-area">
+        <div class="fileinput-button uk-margin-top">
+            <div class="drop-area" id="miniatura">
+                <div class="content">
+                    <span class="uk-icon" uk-icon="icon: cloud-upload"></span>
+                    Arrastra la imagen o haz click <u>aquí</u> para seleccionar una.
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="col s12 m12 uva-margin-top">
-        <div class="file-field input-field">
-            <div class="btn">
-                <span>Seleccionar Imagen Principal</span>
-                <input type="file" id="img-principal" accept="image/*" data-max-size="5000">
-            </div>
-            <div class="file-path-wrapper">
-                <input class="file-path validate" type="text" placeholder="Arrastre o seleccione la imagen principal que desea para la
-del evento">
-            </div>
+
+    <div class="col-11 col-lg-8 offset-lg-1" id="previews">
+        <div id="template" class="uk-margin-top">
+            <table class="table">
+                <thead class="dark-blue-gradient text-light">
+                <tr>
+                    <th scope="col">Imagen</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Tamaño</th>
+                    <th scope="col"></th>
+                </tr>
+                </thead>
+                <tbody class="bg-white">
+                <tr>
+                    <td><img data-dz-thumbnail></td>
+                    <td><p data-dz-name></p></td>
+                    <td><p data-dz-size></p></td>
+                    <td><button data-dz-remove class="bg-white">
+                        <span class="uk-icon" uk-icon="icon: close"></span>
+                    </button></td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 
-    <div class="col s12 m10"></div>
-    <div class="col s12 m2">
-        <button class="btn waves-effect waves-light" type="submit" name="action" id="submit">Enviar
-            <i class="material-icons right">send</i>
-        </button>
-    </div>
+
+
+
 
 
 </div>
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="../js/materialize.min.js"></script>
+<!--<div class="row uva-margin-center">-->
+    <!--<div class="row">-->
+    <!--<select class="browser-default col s12 m12" id="ubicacion"></select>-->
+    <!--</div>-->
+    <!--<div class="row">-->
+    <!--<select class="browser-default disabled col s12 m12" id="lugar"></select>-->
+    <!--</div>-->
+
+    <!--<div class="input-field col s12 m7">-->
+        <!--<i class="material-icons prefix">title</i>-->
+        <!--<input id="titulo" type="text" class="validate">-->
+        <!--<label for="titulo">Título</label>-->
+    <!--</div>-->
+
+    <!--<div class="input-field col s12 m7">-->
+        <!--<i class="material-icons prefix">subtitles</i>-->
+        <!--<input id="frase" type="text" class="validate">-->
+        <!--<label for="titulo">Frase (Aparacera debajo del título)</label>-->
+    <!--</div>-->
+
+    <!--<div class="input-field col s12 m7 uva-margin-top">-->
+        <!--<i class="material-icons prefix">info</i>-->
+        <!--<textarea id="info" class="materialize-textarea validate"></textarea>-->
+        <!--<label for="info">Descipción o información sobre el evento.</label>-->
+    <!--</div>-->
+
+    <!--<div class="input-field col s12 m7">-->
+        <!--<i class="material-icons prefix">link</i>-->
+        <!--<input id="link" type="text" class="validate">-->
+        <!--<label for="titulo">Enlace para obtener más información (opcional)</label>-->
+    <!--</div>-->
+
+    <!--<div class="col s12 m6 uva-margin-top">-->
+        <!--<i class="material-icons prefix">date_range</i>-->
+        <!--<input type="text" class="datepicker" id="fecha-subida" placeholder="Seleccione la fecha de subida">-->
+    <!--</div>-->
+
+    <!--<div class="col s12 m6 uva-margin-top">-->
+        <!--<i class="material-icons prefix">date_range</i>-->
+        <!--<input type="text" class="datepicker" id="fecha-bajada" placeholder="Seleccione la fecha de bajada">-->
+    <!--</div>-->
+
+
+    <!--<div class="col s12 m12 uva-margin-top">-->
+        <!--<div class="file-field input-field">-->
+            <!--<div class="btn">-->
+                <!--<span>Seleccionar Miniatura</span>-->
+                <!--<input type="file" id="img-miniatura" accept="image/*" data-max-size="5000">-->
+            <!--</div>-->
+            <!--<div class="file-path-wrapper">-->
+                <!--<input class="file-path validate"  type="text" placeholder="Arrastre o seleccione la imagen que desea para la miniatura-->
+<!--del evento">-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+
+    <!--<div class="col s12 m12 uva-margin-top">-->
+        <!--<div class="file-field input-field">-->
+            <!--<div class="btn">-->
+                <!--<span>Seleccionar Imagen Principal</span>-->
+                <!--<input type="file" id="img-principal" accept="image/*" data-max-size="5000">-->
+            <!--</div>-->
+            <!--<div class="file-path-wrapper">-->
+                <!--<input class="file-path validate" type="text" placeholder="Arrastre o seleccione la imagen principal que desea para la-->
+<!--del evento">-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+
+    <!--<div class="col s12 m10"></div>-->
+    <!--<div class="col s12 m2">-->
+        <!--<button class="btn waves-effect waves-light" type="submit" name="action" id="submit">Enviar-->
+            <!--<i class="material-icons right">send</i>-->
+        <!--</button>-->
+    <!--</div>-->
+
+
+<!--</div>-->
+
+<script type="text/javascript" src="../js/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/uikit.min.js"></script>
+<script src="../js/uikit-icons.min.js"></script>
+<script src="../js/picker.js"></script>
+<script src="../js/picker.date.js"></script>
+<script src="../js/dropzone.js"></script>
+
 <script type="text/javascript" src="../js/simple-event.js"></script>
+
+
 </body>
 </html>
