--- a/public/Plataforma/events/simple-event.html
+++ b/public/Plataforma/events/simple-event.html
@@ -60,14 +60,27 @@
 
 
 <div class=" row justify-content-center justify-content-lg-start">
+    <div class="col-11 col-lg-8 offset-lg-1">
+        <h4 class="uk-margin-top align-text-bottom">¿Donde quieres que aparezca el evento?</h4>
+    </div>
+
     <div class="col-11 col-md-8 offset-lg-1">
-        <select class="uk-select uk-margin-top" id="ubicacion"></select>
+        <select class="uk-select" id="ubicacion"></select>
     </div>
     <div class="col-11 col-md-8 offset-lg-1">
         <select class="uk-select uk-margin-top" id="lugar"></select>
     </div>
+
+    <div class="col-12 col-md-8 offset-lg-1">
+        <hr class="uk-divider-icon uk-margin-top">
+    </div>
+
+    <div class="col-11 col-lg-8 offset-lg-1">
+        <h4 class="align-text-bottom">Ingresa la información del evento: </h4>
+    </div>
+
     <div class="col-11 col-md-8 col-lg-8 offset-lg-1">
-        <input class="uk-input uk-margin-top" type="text" placeholder="Título" id="titulo">
+        <input class="uk-input" type="text" placeholder="Título" id="titulo">
     </div>
     <div class="col-11 col-md-8 offset-lg-1">
         <input class="uk-input uk-margin-top" placeholder="Frase (Aparecerá debajo del título)" id="frase">
@@ -78,6 +91,15 @@
     <div class="col-11 col-md-8 offset-lg-1">
         <input class="uk-input uk-margin-top" type="text" placeholder="Link (Opcional)" id="link">
     </div>
+
+    <div class="col-12 col-md-8 offset-lg-1">
+        <hr class="uk-divider-icon uk-margin-top">
+    </div>
+
+    <div class="col-11 col-lg-8 offset-lg-1">
+        <h4 class="align-text-bottom">Selecciona las fechas en las que aparecerá el evento:</h4>
+    </div>
+
 
     <div class="col-11 col-md-4 offset-md-1 offset-lg-1">
         <div class="uk-inline uk-margin-top">
@@ -93,8 +115,19 @@
         </div>
     </div>
 
+    <div class="col-12 col-md-8 offset-lg-1">
+        <hr class="uk-divider-icon uk-margin-top">
+    </div>
+
+    <div class="col-11 col-lg-8 offset-lg-1">
+        <h4 class="align-text-bottom">Agrega las imágenes para el evento</h4>
+    </div>
+
+    <div class="col-11 col-lg-8 offset-lg-1">
+        <h5 class="align-text-bottom">Imagen para la tarjeta</h5>
+    </div>
     <div class="col-11 col-md-4 offset-lg-1" id="miniatura-drop-area">
-        <div class="fileinput-button uk-margin-top">
+        <div class="fileinput-button-miniatura">
             <div class="drop-area" id="miniatura">
                 <div class="content">
                     <span class="uk-icon" uk-icon="icon: cloud-upload"></span>
@@ -105,8 +138,48 @@
     </div>
 
 
-    <div class="col-11 col-lg-8 offset-lg-1" id="previews">
-        <div id="template" class="uk-margin-top">
+    <div class="col-11 col-lg-8 offset-lg-1" id="previews-miniatura">
+        <div id="template-miniatura" class="uk-margin-top">
+            <table class="table">
+                <thead class="dark-blue-gradient text-light">
+                <tr>
+                    <th scope="col">Imagen</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Tamaño</th>
+                    <th scope="col"></th>
+                </tr>
+                </thead>
+                <tbody class="bg-white">
+                <tr>
+                    <td><img data-dz-thumbnail></td>
+                    <td><p data-dz-name></p></td>
+                    <td><p data-dz-size></p></td>
+                    <td><button data-dz-remove class="bg-white">
+                        <span class="uk-icon" uk-icon="icon: close"></span>
+                    </button></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="col-11 col-lg-8 offset-lg-1">
+        <h5 class="align-text-bottom uk-margin-top">Imagen del evento</h5>
+    </div>
+    <div class="col-11 col-md-4 offset-lg-1" id="principal-drop-area">
+        <div class="fileinput-button-principal">
+            <div class="drop-area" id="principal">
+                <div class="content">
+                    <span class="uk-icon" uk-icon="icon: cloud-upload"></span>
+                    Arrastra la imagen o haz click <u>aquí</u> para seleccionar una.
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="col-11 col-lg-8 offset-lg-1" id="previews-principal">
+        <div id="template-principal" class="uk-margin-top">
             <table class="table">
                 <thead class="dark-blue-gradient text-light">
                 <tr>
@@ -131,7 +204,7 @@
     </div>
 
     <div class="offset-8 align-self-end">
-        <button class="uk-button uk-button-primary uk-margin-top" id="submit">Enviar</button>
+        <button class="uk-button uk-button-primary uk-margin-top uk-margin-bottom" id="submit">Enviar</button>
     </div>
 
 
@@ -140,85 +213,6 @@
 
 
 </div>
-
-<!--<div class="row uva-margin-center">-->
-    <!--<div class="row">-->
-    <!--<select class="browser-default col s12 m12" id="ubicacion"></select>-->
-    <!--</div>-->
-    <!--<div class="row">-->
-    <!--<select class="browser-default disabled col s12 m12" id="lugar"></select>-->
-    <!--</div>-->
-
-    <!--<div class="input-field col s12 m7">-->
-        <!--<i class="material-icons prefix">title</i>-->
-        <!--<input id="titulo" type="text" class="validate">-->
-        <!--<label for="titulo">Título</label>-->
-    <!--</div>-->
-
-    <!--<div class="input-field col s12 m7">-->
-        <!--<i class="material-icons prefix">subtitles</i>-->
-        <!--<input id="frase" type="text" class="validate">-->
-        <!--<label for="titulo">Frase (Aparacera debajo del título)</label>-->
-    <!--</div>-->
-
-    <!--<div class="input-field col s12 m7 uva-margin-top">-->
-        <!--<i class="material-icons prefix">info</i>-->
-        <!--<textarea id="info" class="materialize-textarea validate"></textarea>-->
-        <!--<label for="info">Descipción o información sobre el evento.</label>-->
-    <!--</div>-->
-
-    <!--<div class="input-field col s12 m7">-->
-        <!--<i class="material-icons prefix">link</i>-->
-        <!--<input id="link" type="text" class="validate">-->
-        <!--<label for="titulo">Enlace para obtener más información (opcional)</label>-->
-    <!--</div>-->
-
-    <!--<div class="col s12 m6 uva-margin-top">-->
-        <!--<i class="material-icons prefix">date_range</i>-->
-        <!--<input type="text" class="datepicker" id="fecha-subida" placeholder="Seleccione la fecha de subida">-->
-    <!--</div>-->
-
-    <!--<div class="col s12 m6 uva-margin-top">-->
-        <!--<i class="material-icons prefix">date_range</i>-->
-        <!--<input type="text" class="datepicker" id="fecha-bajada" placeholder="Seleccione la fecha de bajada">-->
-    <!--</div>-->
-
-
-    <!--<div class="col s12 m12 uva-margin-top">-->
-        <!--<div class="file-field input-field">-->
-            <!--<div class="btn">-->
-                <!--<span>Seleccionar Miniatura</span>-->
-                <!--<input type="file" id="img-miniatura" accept="image/*" data-max-size="5000">-->
-            <!--</div>-->
-            <!--<div class="file-path-wrapper">-->
-                <!--<input class="file-path validate"  type="text" placeholder="Arrastre o seleccione la imagen que desea para la miniatura-->
-<!--del evento">-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="col s12 m12 uva-margin-top">-->
-        <!--<div class="file-field input-field">-->
-            <!--<div class="btn">-->
-                <!--<span>Seleccionar Imagen Principal</span>-->
-                <!--<input type="file" id="img-principal" accept="image/*" data-max-size="5000">-->
-            <!--</div>-->
-            <!--<div class="file-path-wrapper">-->
-                <!--<input class="file-path validate" type="text" placeholder="Arrastre o seleccione la imagen principal que desea para la-->
-<!--del evento">-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="col s12 m10"></div>-->
-    <!--<div class="col s12 m2">-->
-        <!--<button class="btn waves-effect waves-light" type="submit" name="action" id="submit">Enviar-->
-            <!--<i class="material-icons right">send</i>-->
-        <!--</button>-->
-    <!--</div>-->
-
-
-<!--</div>-->
 
 <script type="text/javascript" src="../js/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
@@ -234,3 +228,4 @@
 
 </body>
 </html>
+
